syntax = "proto3";

package matching;

service MatchingEngine {
  rpc PlaceOrder(OrderRequest) returns (OrderResponse);
  rpc CancelOrder(CancelRequest) returns (CancelResponse);
  rpc GetOrderBook(OrderBookRequest) returns (OrderBookResponse);
  rpc StreamTrades(StreamRequest) returns (stream TradeEvent);
}

message OrderRequest {
  string order_id = 1;
  string user_id = 2;
  string symbol = 3;
  OrderSide side = 4;
  OrderType type = 5;
  string price = 6;  // Decimal string
  string amount = 7; // Decimal string
  int64 timestamp = 8;
}

message OrderResponse {
  bool success = 1;
  string order_id = 2;
  string message = 3;
  repeated Fill fills = 4;
}

message Fill {
  string trade_id = 1;
  string price = 2;
  string amount = 3;
  int64 timestamp = 4;
}

message CancelRequest {
  string order_id = 1;
  string user_id = 2;
}

message CancelResponse {
  bool success = 1;
  string message = 2;
}

message OrderBookRequest {
  string symbol = 1;
  int32 depth = 2;
}

message OrderBookResponse {
  repeated PriceLevel bids = 1;
  repeated PriceLevel asks = 2;
}

message PriceLevel {
  string price = 1;
  string amount = 2;
  int32 order_count = 3;
}

message StreamRequest {
  string symbol = 1;
}

message TradeEvent {
  string trade_id = 1;
  string symbol = 2;
  string price = 3;
  string amount = 4;
  OrderSide taker_side = 5;
  int64 timestamp = 6;
}

enum OrderSide {
  BUY = 0;
  SELL = 1;
}

enum OrderType {
  LIMIT = 0;
  MARKET = 1;
}
